--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^8.0.0",
+    "date-fns": "^2.0.0-alpha.22",
     "expo": "^30.0.1",
     "native-base": "^2.8.1",
     "react": "16.3.1",
