--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@expo/vector-icons": "^8.0.0",
     "date-fns": "^2.0.0-alpha.22",
+    "debounce": "^1.2.0",
     "expo": "^30.0.1",
+    "lodash.debounce": "^4.0.8",
     "native-base": "^2.8.1",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-animatable": "^1.3.0"
   }
 }
